ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode9/input.ts.stderr
error: 'eval' and 'arguments' cannot be used as a binding identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode9/input.ts:2:18
  |
2 | var v = function eval() {
  |                  ^^^^

